// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not attempt to use a shadowed existing default import 1`] = `
"import _assert from \\"power-assert\\";
import fancyAssert from 'power-assert';
{
  let fancyAssert;

  _assert(1 === 1);
}"
`;

exports[`does not attempt to use an existing named import 1`] = `
"import _assert from \\"power-assert\\";
import { fancyAssert } from 'power-assert';

_assert(1 === 1);"
`;

exports[`does not break preset-env module transform and generates code runnable in node 1`] = `"false == true"`;

exports[`does not clash with an existing "_assert" identifier in another scope after adding an import 1`] = `
"import _assert2 from \\"power-assert\\";

_assert2(1 === 1);

{
  let _assert;

  _assert2(2 === 2);
}"
`;

exports[`does not clash with an existing "_assert" import 1`] = `
"import _assert2 from \\"power-assert\\";
import _assert from 'fancy-assert';

_assert2(1 === 1);"
`;

exports[`imports from a custom source 1`] = `
"import _assert from \\"fancy-assert\\";

_assert(1 === 1);"
`;

exports[`imports from power-assert by default 1`] = `
"import _assert from \\"power-assert\\";

_assert(1 === 1);"
`;

exports[`reuses the same import for multiple assertions 1`] = `
"import _assert from \\"power-assert\\";

_assert(1 === 1);

_assert(2 === 2);"
`;

exports[`reuses the same import for multiple assertions in nested scopes 1`] = `
"import _assert from \\"power-assert\\";

(() => {
  _assert(1 === 1);

  _assert(2 === 2);
})();"
`;

exports[`uses an existing default import 1`] = `
"import fancyAssert from 'power-assert';
fancyAssert(1 === 1);"
`;
